--- a/static/stilo.css
+++ b/static/stilo.css
@@ -336,6 +336,28 @@
 		-ms-transition: all .4s ease-in-out;
 		-o-transition: all .4s ease-in-out;
 }
+
+.buttons img {
+	text-decoration: none;
+	font-size: 28px;
+	width: 60px;
+	height: 60px;
+	line-height: 60px;
+	text-align: center;
+	background: black;
+	color: #f1f1f1;
+	border-radius: 50%;
+	box-shadow: 2px 2px 5px #fff;
+	transition: all .4s ease-in-out;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	-ms-border-radius: 50%;
+	-o-border-radius: 50%;
+	-webkit-transition: all .4s ease-in-out;
+	-moz-transition: all .4s ease-in-out;
+	-ms-transition: all .4s ease-in-out;
+	-o-transition: all .4s ease-in-out;
+}
 	  
 	  .buttons .face a:hover {
 		transform: scale(1.2);
@@ -356,14 +378,17 @@
 		transform: scale(1.2);
 		color:#c4302b;
 		background-image: radial-gradient(circle at 87.5% 12.5%, black 0,  black 100%);
-	  }
+	  box-shadow:2px 2px 5px #c4302b;
+		}
 
-	  .buttons .gith a:hover {
+	  .buttons .merca a:hover {
 		transform: scale(1.2);
-		background-image: radial-gradient(circle at 87.5% 12.5%, #171515 0,  #171515 100%);
+		box-shadow: 2px 2px 5px yellow
 	  }
 
 	  .buttons .inst a:hover {
 		transform: scale(1.2);
 		background-image: radial-gradient(circle at 87.5% 12.5%, #0090ff 0, #008cff 6.25%, #0086ff 12.5%, #0080ff 18.75%, #4779ff 25%, #7371fa 31.25%, #9268f0 37.5%, #aa5fe5 43.75%, #be55d8 50%, #ce4bca 56.25%, #dc40ba 62.5%, #e636aa 68.75%, #ee2d9a 75%, #f32789 81.25%, #f62678 87.5%, #f72a67 93.75%, #f63157 100%);
-	  }
+		}
+
+
