--- a/static/css/login.css
+++ b/static/css/login.css
@@ -13,6 +13,143 @@ body {
     background-position: center;
     background-repeat: no-repeat;
 }
+.hidden{
+    overflow: hidden;
+}
+
+.centrado{
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+}
+
+.cssload-loader {
+	width: 500px;
+	height: 100px;
+	line-height: 100px;
+	text-align: center;
+	position: absolute;
+	left: 50%;
+	transform: translate(-50%, -50%);
+		-o-transform: translate(-50%, -50%);
+		-ms-transform: translate(-50%, -50%);
+		-webkit-transform: translate(-50%, -50%);
+		-moz-transform: translate(-50%, -50%);
+	font-family: helvetica, arial, sans-serif;
+	text-transform: uppercase;
+	font-weight: 900;
+	font-size:36px;
+	color: rgb(206,66,51);
+	letter-spacing: 0.2em;
+}
+.cssload-loader::before, .cssload-loader::after {
+	content: "";
+	display: block;
+	width: 30px;
+	height: 30px;
+	background: rgb(206,66,51);
+	position: absolute;
+	animation: cssload-load 0.81s infinite alternate ease-in-out;
+		-o-animation: cssload-load 0.81s infinite alternate ease-in-out;
+		-ms-animation: cssload-load 0.81s infinite alternate ease-in-out;
+		-webkit-animation: cssload-load 0.81s infinite alternate ease-in-out;
+		-moz-animation: cssload-load 0.81s infinite alternate ease-in-out;
+}
+.cssload-loader::before {
+	top: 0;
+}
+.cssload-loader::after {
+	bottom: 0;
+}
+
+
+
+@keyframes cssload-load {
+	0% {
+		left: 0;
+		height: 60px;
+		width: 30px;
+	}
+	50% {
+		height: 16px;
+		width: 80px;
+	}
+	100% {
+		left: 470px;
+		height: 60px;
+		width: 30px;
+	}
+}
+
+@-o-keyframes cssload-load {
+	0% {
+		left: 0;
+		height: 60px;
+		width: 30px;
+	}
+	50% {
+		height: 16px;
+		width: 80px;
+	}
+	100% {
+		left: 470px;
+		height: 60px;
+		width: 30px;
+	}
+}
+
+@-ms-keyframes cssload-load {
+	0% {
+		left: 0;
+		height: 60px;
+		width: 30px;
+	}
+	50% {
+		height: 16px;
+		width: 80px;
+	}
+	100% {
+		left: 470px;
+		height: 60px;
+		width: 30px;
+	}
+}
+
+@-webkit-keyframes cssload-load {
+	0% {
+		left: 0;
+		height: 60px;
+		width: 30px;
+	}
+	50% {
+		height: 16px;
+		width: 80px;
+	}
+	100% {
+		left: 470px;
+		height: 60px;
+		width: 30px;
+	}
+}
+
+@-moz-keyframes cssload-load {
+	0% {
+		left: 0;
+		height: 60px;
+		width: 30px;
+	}
+	50% {
+		height: 16px;
+		width: 80px;
+	}
+	100% {
+		left: 470px;
+		height: 60px;
+		width: 30px;
+	}
+}
 
 .form {
     display: flex;
