--- a/static/stilo.css
+++ b/static/stilo.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Akshar:wght@300;400;500;600;700&family=Tilt+Prism&display=swap');
 
+
 	*{
 		margin: 0;
 		padding: 0;
@@ -11,12 +12,117 @@
 		height: 100% ;
 		width: 100%;
 		background-repeat: no-repeat;
+		overflow-x: hidden;
+	}
+	.hidden{
+		overflow: hidden;
 	}
 
+	.centrado{
+		height: 100vh;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+
+	}
+	.lds-roller {
+		display: inline-block;
+		position: relative;
+		width: 80px;
+		height: 80px;
+	}
+	.lds-roller div {
+		animation: lds-roller 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+		transform-origin: 40px 40px;
+	}
+	.lds-roller div:after {
+		content: " ";
+		display: block;
+		position: absolute;
+		width: 7px;
+		height: 7px;
+		border-radius: 50%;
+		background: #fff;
+		margin: -4px 0 0 -4px;
+	}
+	.lds-roller div:nth-child(1) {
+		animation-delay: -0.036s;
+	}
+	.lds-roller div:nth-child(1):after {
+		top: 63px;
+		left: 63px;
+	}
+	.lds-roller div:nth-child(2) {
+		animation-delay: -0.072s;
+	}
+	.lds-roller div:nth-child(2):after {
+		top: 68px;
+		left: 56px;
+	}
+	.lds-roller div:nth-child(3) {
+		animation-delay: -0.108s;
+	}
+	.lds-roller div:nth-child(3):after {
+		top: 71px;
+		left: 48px;
+	}
+	.lds-roller div:nth-child(4) {
+		animation-delay: -0.144s;
+	}
+	.lds-roller div:nth-child(4):after {
+		top: 72px;
+		left: 40px;
+	}
+	.lds-roller div:nth-child(5) {
+		animation-delay: -0.18s;
+	}
+	.lds-roller div:nth-child(5):after {
+		top: 71px;
+		left: 32px;
+	}
+	.lds-roller div:nth-child(6) {
+		animation-delay: -0.216s;
+	}
+	.lds-roller div:nth-child(6):after {
+		top: 68px;
+		left: 24px;
+	}
+	.lds-roller div:nth-child(7) {
+		animation-delay: -0.252s;
+	}
+	.lds-roller div:nth-child(7):after {
+		top: 63px;
+		left: 17px;
+	}
+	.lds-roller div:nth-child(8) {
+		animation-delay: -0.288s;
+	}
+	.lds-roller div:nth-child(8):after {
+		top: 56px;
+		left: 12px;
+	}
+	@keyframes lds-roller {
+		0% {
+			transform: rotate(0deg);
+			-webkit-transform: rotate(0deg);
+			-moz-transform: rotate(0deg);
+			-ms-transform: rotate(0deg);
+			-o-transform: rotate(0deg);
+}
+		100% {
+			transform: rotate(360deg);
+			-webkit-transform: rotate(360deg);
+			-moz-transform: rotate(360deg);
+			-ms-transform: rotate(360deg);
+			-o-transform: rotate(360deg);
+}
+	}
+	
+	
 	.header{
 		width: 100%;
 		height: 100px;
-		position: fixed;
+		/*position: fixed;*/
 		top: 0;left: 0;
 		z-index: 1;
 	}
@@ -340,9 +446,9 @@
 .buttons img {
 	text-decoration: none;
 	font-size: 28px;
-	width: 60px;
+	width: 50px;
 	height: 60px;
-	line-height: 60px;
+	line-height: 50px;
 	text-align: center;
 	background: black;
 	color: #f1f1f1;
@@ -362,33 +468,32 @@
 	  .buttons .face a:hover {
 		transform: scale(1.2);
 		background-image: radial-gradient(circle at 87.5% 12.5%, #366bdd 0,  #366bdd 100%);
-	  }
-
-	  .buttons .twit a:hover {
-		transform: scale(1.2);
-		background-image: radial-gradient(circle at 87.5% 12.5%, #00acee 0,  #00acee 100%);
-	  }
+	  box-shadow: 2px 2px 5px #366bdd;
+		}
 
 	  .buttons .what a:hover {
 		transform: scale(1.2);
 		background-image: radial-gradient(circle at 87.5% 12.5%, #25D366 0,  #25D366 100%);
-	  }
+	  box-shadow: 2px 2px 5px #25D366;
+	}
 
-	  .buttons .yout a:hover {
+	  .buttons .email a:hover {
 		transform: scale(1.2);
 		color:#c4302b;
-		background-image: radial-gradient(circle at 87.5% 12.5%, black 0,  black 100%);
-	  box-shadow:2px 2px 5px #c4302b;
+		background-image: radial-gradient(circle at 87.5% 12.5%, #9e0c07 0%,  #9e0c07 100%);
+	  box-shadow:2px 2px 5px #9e0c07;
 		}
 
 	  .buttons .merca a:hover {
 		transform: scale(1.2);
-		box-shadow: 2px 2px 5px yellow
+		background-image: radial-gradient(circle at 87.5% 12.5%, yellow 0%,  yellow 100%);
+		box-shadow: 2px 2px 5px yellow;
 	  }
 
 	  .buttons .inst a:hover {
 		transform: scale(1.2);
 		background-image: radial-gradient(circle at 87.5% 12.5%, #0090ff 0, #008cff 6.25%, #0086ff 12.5%, #0080ff 18.75%, #4779ff 25%, #7371fa 31.25%, #9268f0 37.5%, #aa5fe5 43.75%, #be55d8 50%, #ce4bca 56.25%, #dc40ba 62.5%, #e636aa 68.75%, #ee2d9a 75%, #f32789 81.25%, #f62678 87.5%, #f72a67 93.75%, #f63157 100%);
-		}
+		box-shadow: 2px 2px 5px #ce4bca;
+	}
 
 
